q 1 almost completed and q2 half done

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,30 +1,43 @@
+/* You can add global styles to this file, and also import other style files */
+
+
+/*autoprefixer used*/
+
+*,
 *::after,
 *::before {
   margin: 0;
   padding: 0;
   box-sizing: border-box
 }
+
 html,
 body {
+  /*this will give a vertical scrollbar by default, so there isn't a little jump when you start entering search terms*/
   height: calc(100% + 1px)
 }
+
 body {
   font: 100% 'Arimo', sans-serif;
 }
+
 .filter-wrapper,
 .keyword-wrapper {
   display: flex;
   justify-content: center;
 }
+
 .filter-wrapper {
   min-height: 100%;
   flex-flow: column wrap;;
   position: relative
 }
+
 .keyword-wrapper {
   width: 100%;
   position: relative;
 }
+
 #keyword {
   border: 1px solid #ccc;
   padding: 10px;
@@ -33,9 +46,11 @@ body {
   outline: none;
   transition: border 0.5s ease-in-out
 }
+
 #keyword:focus {
   border-color : rgba(81, 203, 238, 1);;
 }
+
 #keyword-button {
   position: absolute;
   right: 26%;
@@ -44,9 +59,11 @@ body {
   font-size: 1.7em;
   color: #8DB9ED
 }
+
 #keyword-button:hover {
   color: #ccc
 }
+
 .filter-select {
   width: 50%;
   list-style: none;
@@ -57,7 +74,9 @@ body {
   /*so things don't jump around*/
   position: absolute;
   left: 25%;
+  /*Since we know the wrapper will always be 100% height, we can use half of 100% + half the height of the input*/
   top: calc(50% + 25px);
+  /*for a better calculation use JS.  I'm calculating half of the body height - half the height of the input - li padding*/
   max-height: calc(50% - 15px);
   overflow-y: auto;
   background: #fff
@@ -65,6 +84,7 @@ body {
 .filter-select-list img {
   margin-right: 30px;
 }
+
 .tags {
   font-size: 12px;
   font-style: italic;
@@ -76,23 +96,31 @@ body {
 .filter-select-list:hover .tags {
   color: #fff;
 }
+
 .filter-select-list {
   cursor: pointer;
   padding: 5px 10px;
 }
+
 .artist-name {
   display: inline-block;
   position: absolute;
 }
+
 .filter-select-list:hover {
-  background:  #C0C0C0;
+  background: 	#C0C0C0;
   color: #fff
 }
+
 .list-highlight,
 .list-highlight:hover {
   background: rgb(55, 55, 55);
   color: #fff
 }
+
+
+/*some simple responsive designs*/
+
 @media only screen and (max-width: 768px) {
   .filter-select,
   #keyword {
@@ -110,6 +138,7 @@ body {
     right: 11%
   }
 }
+
 @media only screen and (max-width: 480px) {
   .filter-select,
   #keyword {
