--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,12 +1,15 @@
 
 <section class="filter-wrapper">
   <div class="keyword-wrapper">
-    <input [formControl]="queryField" type="text" id="keyword" placeholder="search for artists..." autofocus/>
+    <input [formControl]="queryField" type="text" id="keyword" placeholder="search for stocks..." autofocus/>
   </div>
-  <ul class="filter-select">
-    <li *ngFor="let result of results" class="filter-select-list"><img src="{{result.images['2']?.url}}" alt="" width="50" height="50"><p class="artist-name">
-      {{result.name}}</p>
 
-      <span class="tags" *ngFor='let genre of result?.genres  | slice:0:6'>{{genre}}</span>
+  <ul class="filter-select">
+    <li *ngFor="let result of stocks" class="filter-select-list">
+      <img src="https://docs.microsoft.com/en-gb/azure/includes/media/cloud-shell-try-it/cloud-shell-menu.png" width="50" height="50" alt="Cloud Shell in the portal" >
+      <p class="artist-name">
+        {{result.Description}}
+      </p>
+    </li>
   </ul>
 </section>
