--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 
-<app-search></app-search>
-<router-outlet></router-outlet>
+<section class="filter-wrapper">
+  <app-search></app-search>
+  <router-outlet></router-outlet>
 
-
+</section>
