--- a/src/app/detail/detail.component.html
+++ b/src/app/detail/detail.component.html
@@ -1,7 +1,8 @@
 
-<section *ngIf="stock">
-  <div class="keyword-wrapper">
-    <p>{{stock.Cusip}}</p>
-    <p>{{stock.Description}}</p>
-  </div>
-</section>
+<div class="filter-select" style="border: none;margin-top: 20px;" *ngIf="stock">
+    <p style="color: grey;"><label>Description : <span>{{stock.Description}}</span></label></p>
+    <br>
+    <p><label>SecType : <span>{{stock.SecType}}</span></label></p>
+    <p><label>Ticker : <span>{{stock.Ticker}}</span></label></p>
+    <p><label>Cusip : <span>{{stock.Cusip}}</span></label></p>
+</div>
