--- a/src/app/detail/detail.component.html
+++ b/src/app/detail/detail.component.html
@@ -1,6 +1,6 @@
 
-<div class="filter-select" style="border: none;margin-top: 20px;" *ngIf="stock">
-    <p style="color: grey;"><label>Description : <span>{{stock.Description}}</span></label></p>
+<div class="filter-select detail" *ngIf="stock">
+    <p><label>Description : <span>{{stock.Description}}</span></label></p>
     <br>
     <p><label>SecType : <span>{{stock.SecType}}</span></label></p>
     <p><label>Ticker : <span>{{stock.Ticker}}</span></label></p>
